# intake

./: Intake.hs  LICENSE  README  README.md  build.sh  ghci-readme.sh  intake.cabal  run-readme.sh  run.sh  test-and-coverage.sh
Intake/: Client.hs  Commands.hs  Core.hs  Engine.hs  Http.hs  Job.hs  Process.hs  Types.hs  Walker.hs  Worker.hs  Workflow.hs
Network/: JSONClient.hs
tests/: intake-curl-json-workflows.txt  intake-curl-text-workflows.txt  intake-run-00.hs  invoked-echo-a.txt  invoked-echo-b.txt  invoked-false.hs  invoked-invoked-false.hs  invoked-invoked-false.txt  invoked-invoked-true.txt  invoked-true.hs  invoked.hs  main.hs
workflows/: tag-hello.json  tag-success.json  workflow-sample-00.json  workflow-sample-02.json  workflow-sample-03.json  workflow-sample-04.json  workflow-sample-05.json
