name:                intake
version:             0.0.0
Cabal-Version:       >= 1.8
synopsis:            Run job workflows
description:
  Intake runs job workflows.
category:            System
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.be
build-type:          Simple

library
  build-depends:       base == 4.*,
                       bytestring == 0.10.*,
                       containers == 0.5.*,
                       directory == 1.2.*,
                       filepath == 1.3.*,
                       MonadRandom == 0.1.*,
                       process == 1.1.*,
                       snap-core == 0.9.*,
                       snap-server == 0.9.*,
                       transformers == 0.3.*
  exposed-modules:     Intake.Core,
                       Intake.Engine,
                       Intake.Http,
                       Intake.Process
  ghc-options:         -Wall

executable intake
  hs-source-dirs:      bin
  main-is:             intake.hs
  build-depends:       base == 4.*,
                       cmdargs == 0.9.*,
                       containers == 0.5.*,
                       HUnit == 1.2.*,
                       intake,
                       test-framework == 0.8.*,
                       test-framework-hunit == 0.3.*
  ghc-options:         -Wall
                       -threaded
