name:                intake
version:             0.0.0
Cabal-Version:       >= 1.8
synopsis:            UNIX jobs orchestration
description:
  Intake runs process workflows (as in UNIX, not business process).
category:            System
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.be
build-type:          Simple

library
  build-depends:       aeson == 0.6.*,
                       attoparsec == 0.10.*,
                       base == 4.*,
                       bytestring == 0.10.*,
                       containers == 0.5.*,
                       directory == 1.2.*,
                       filepath == 1.3.*,
                       HsOpenSSL == 0.10.*,
                       http-streams == 0.4.*,
                       io-streams == 1.0.*,
                       MonadRandom == 0.1.*,
                       process == 1.1.*,
                       regex-posix == 0.95.*,
                       snap-core == 0.9.*,
                       snap-server == 0.9.*,
                       text == 0.11.*,
                       transformers == 0.3.*
  exposed-modules:     Intake.Client,
                       Intake.Core,
                       Intake.Engine,
                       Intake.Http,
                       Intake.Job,
                       Intake.Process
  other-modules:       Network.JSONClient
  ghc-options:         -Wall

executable intake
  hs-source-dirs:      bin
  main-is:             intake.hs
  build-depends:       base == 4.*,
                       cmdargs == 0.9.*,
                       containers == 0.5.*,
                       HUnit == 1.2.*,
                       intake,
                       test-framework == 0.8.*,
                       test-framework-hunit == 0.3.*
  ghc-options:         -Wall
                       -threaded

-- The test suite is actually test-and-coverage.sh.
test-suite intake-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             main.hs
  build-depends:       base == 4.*
  ghc-options:         -Wall
