name:                intake
version:             0.0.1
Cabal-Version:       >= 1.8
synopsis:            UNIX jobs orchestration
description:
  Intake runs process workflows (as in UNIX, not business process).
category:            System
license:             BSD3
license-file:        LICENSE
author:              Hypered SPRL
maintainer:          thu@hypered.io
build-type:          Simple

-- Commented because it's boring to compile.
-- Can be undone later.

library
  build-depends:
    aeson,
--    attoparsec,
    base == 4.*,
    bytestring,
--    containers,
--    directory,
--    filepath,
    lovelace,
--    HsOpenSSL,
--    http-streams,
--    io-streams,
--    MonadRandom,
--    process,
--    regex-posix,
--    snap-core,
--    snap-server,
    text,
    time,
--    transformers,
    unordered-containers,
    vector
  exposed-modules:
--    Intake.Client,
--    Intake.Core,
--    Intake.Engine,
--    Intake.Http,
--    Intake.Job,
--    Intake.Process
    Intake.Types,
    Intake.Walker,
    Intake.Worker,
    Intake.Workflow
  other-modules:
--    Network.JSONClient,
    Paths_intake
  ghc-options:         -Wall

--executable intake
--  hs-source-dirs:      bin
--  main-is:             intake.hs
--  build-depends:       base == 4.*,
--                       cmdargs,
--                       containers,
--                       HUnit,
--                       intake,
--                       test-framework,
--                       test-framework-hunit
--  ghc-options:         -Wall
--                       -threaded

executable reesd-intake
  hs-source-dirs:      bin
  main-is:             reesd-intake.hs
  build-depends:
    aeson,
    base == 4.*,
    bytestring,
    cmdargs,
    intake,
    lovelace,
    text,
    time
  ghc-options:         -Wall
                       -threaded

-- The test suite is actually test-and-coverage.sh.
test-suite intake-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             main.hs
  build-depends:       base == 4.*
  ghc-options:         -Wall
